--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -1,3 +1,7 @@
+<!-- we suppose that if a page is excluded from the site map it also shouldn't be indexed by any robots -->
+{{ if .Params.sitemapExclude}}
+<meta name="robots" content="noindex">
+{{ end }}
 {{ if .Params.description }}
 <meta name="description" content="{{ .Params.Description }}">
 {{ else }}
