--- a/qdrant-landing/themes/qdrant/static/css/pages/marketing-landing.scss
+++ b/qdrant-landing/themes/qdrant/static/css/pages/marketing-landing.scss
@@ -2,7 +2,9 @@
 @use "../mixins/mixins" as *;
 @use "../mixins/marquee" as marquee;
 @use "../variables" as vars;
-@use "grid-background" as *;
+@use "../blocks/grid-background" as *;
+
+@use "../../../../../node_modules/bootstrap/scss/bootstrap.scss" as bs;
 
 $landing-font-family: 'Roboto', sans-serif;
 
@@ -15,7 +17,7 @@ $landing-font-family: 'Roboto', sans-serif;
   padding-top: rem(24);
   background: var(--neutral-n-50);
 
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     padding-top: rem(120);
   }
 
@@ -42,14 +44,14 @@ $landing-font-family: 'Roboto', sans-serif;
   @include here-font-styles(rem(18), 600, rem(27));
   color: #FFF;
 
-  @include media-breakpoint-down(md) {
+  @include bs.media-breakpoint-down(md) {
     &:hover, &:active {
       background-color: var(--neutral-n-600, #39508F);
       color: #FFF;
     }
   }
 
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     @include buttonHoverEffect(var(--neutral-n-600, #39508F), #FFF);
     min-width: auto;
     margin-right: rem(40);
@@ -60,7 +62,7 @@ $landing-font-family: 'Roboto', sans-serif;
 .ml-hero {
   margin-bottom: rem(40);
 
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     margin-bottom: rem(80);
   }
 
@@ -76,7 +78,7 @@ $landing-font-family: 'Roboto', sans-serif;
     @include here-font-styles(rem(32), 700, rem(40));
     margin-bottom: rem(16);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       text-align: left;
       font-size: rem(40);
       line-height: rem(48);
@@ -89,7 +91,7 @@ $landing-font-family: 'Roboto', sans-serif;
     @include here-font-styles(rem(16), 400, rem(24));
     margin-bottom: rem(24);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       font-size: rem(18);
       line-height: rem(27);
       text-align: left;
@@ -111,7 +113,7 @@ $landing-font-family: 'Roboto', sans-serif;
     color: var(--neutral-n-700, #1F3266);
 
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       padding: 0;
       border: none;
       min-width: auto;
@@ -120,7 +122,7 @@ $landing-font-family: 'Roboto', sans-serif;
 
     &:hover {
       background: var(--neutral-n-200, #AEBDE5);
-      @include media-breakpoint-up(md) {
+      @include bs.media-breakpoint-up(md) {
         text-decoration: underline;
         background: none;
       }
@@ -132,7 +134,7 @@ $landing-font-family: 'Roboto', sans-serif;
     margin-left: -15px;
     margin-right: -15px;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       padding-left: rem(29);
       margin-left: 0;
       margin-right: 0;
@@ -148,7 +150,7 @@ $landing-font-family: 'Roboto', sans-serif;
 .ml-customers {
   margin-bottom: rem(40);
 
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     margin-bottom: rem(80);
   }
 
@@ -157,7 +159,7 @@ $landing-font-family: 'Roboto', sans-serif;
     @include here-font-styles(rem(18), 600, rem(27));
     margin-bottom: rem(24);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       margin-bottom: rem(40);
     }
   }
@@ -168,7 +170,7 @@ $landing-font-family: 'Roboto', sans-serif;
     border-bottom: 1px solid var(--neutral-n-100, #DCE4FA);
     padding: rem(14) 0;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       margin-left: 0;
       margin-right: 0;
     }
@@ -185,7 +187,7 @@ $landing-font-family: 'Roboto', sans-serif;
       display: none;
     }
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       &:before {
         display: block;
         box-shadow: 0 0 30px 30px var(--neutral-n-50);
@@ -206,16 +208,35 @@ $landing-font-family: 'Roboto', sans-serif;
   &__title {
     text-align: center;
     @include here-font-styles(rem(24), 700, rem(32));
-    margin-bottom: rem(40);
     white-space: break-spaces;
     word-break: keep-all;
+    padding-bottom: rem(24);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       font-size: rem(32);
       line-height: rem(40);
       margin-left: rem(94);
       margin-right: rem(94);
-      margin-bottom: rem(64);
+    }
+  }
+
+  &__subtitle {
+    @extend .ml-features__title;
+    font-size: rem(18);
+    line-height: rem(27);
+
+    @include bs.media-breakpoint-up(md) {
+      font-size: rem(24);
+      line-height: rem(32);
+    }
+
+    a {
+      color: inherit;
+      text-decoration: underline dotted;
+
+      &:hover {
+        text-decoration: underline solid;
+      }
     }
   }
 
@@ -224,7 +245,7 @@ $landing-font-family: 'Roboto', sans-serif;
     gap: 24px;
     margin-bottom: rem(24);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       margin-bottom: rem(64);
       justify-content: center;
     }
@@ -240,7 +261,7 @@ $landing-font-family: 'Roboto', sans-serif;
     border: 1px solid var(--neutral-n-100, #DCE4FA);
     background: #FFF;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       flex: 0 0 calc(33% - 24px);
     }
 
@@ -262,7 +283,7 @@ $landing-font-family: 'Roboto', sans-serif;
   padding-top: rem(40);
   margin-bottom: rem(40);
 
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     padding-top: rem(64);
     margin-bottom: rem(80);
   }
@@ -272,7 +293,7 @@ $landing-font-family: 'Roboto', sans-serif;
     margin-bottom: rem(40);
     text-align: center;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       margin-bottom: rem(64);
     }
   }
@@ -282,7 +303,7 @@ $landing-font-family: 'Roboto', sans-serif;
     flex-direction: column;
     gap: 24px;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       flex-direction: row;
       justify-content: center;
     }
@@ -296,7 +317,7 @@ $landing-font-family: 'Roboto', sans-serif;
     border-radius: 8px;
     background: #FFF;
     background-image: $markets-background;
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       width: rem(352);
 
       &:hover {
@@ -312,7 +333,7 @@ $landing-font-family: 'Roboto', sans-serif;
 }
 
 .ml-banner {
-  @include media-breakpoint-up(md) {
+  @include bs.media-breakpoint-up(md) {
     margin-bottom: rem(48);
   }
 
@@ -323,7 +344,7 @@ $landing-font-family: 'Roboto', sans-serif;
     background-repeat: no-repeat;
     background-position: bottom center;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       height: rem(400);
       background-position: bottom right;
     }
@@ -335,7 +356,7 @@ $landing-font-family: 'Roboto', sans-serif;
     padding: rem(40) rem(24);
     justify-content: center;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       width: 50%;
       height: rem(400);
       padding-top: rem(40);
@@ -350,7 +371,7 @@ $landing-font-family: 'Roboto', sans-serif;
     @include here-font-styles(rem(32), 700, rem(40));
     margin-bottom: rem(24);
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       text-align: left;
       font-size: rem(48);
       line-height: rem(56);
@@ -361,7 +382,7 @@ $landing-font-family: 'Roboto', sans-serif;
     margin-left: auto;
     margin-right: auto;
 
-    @include media-breakpoint-up(md) {
+    @include bs.media-breakpoint-up(md) {
       margin: 0;
     }
   }
