--- a/qdrant-landing/themes/qdrant/static/css/_colors.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_colors.scss
@@ -17,4 +17,14 @@
   --neutral-n-700: #1F3266;
   --neutral-n-800: #102252;
   --neutral-n-900: #06153D;
+
+  --brand-success-100: #D1FADF;
+  --brand-success-500: #12B765;
+  --brand-success-900: #085232;
+  --brand-warning-100: #FEE4C7;
+  --brand-warning-500: #F5870A;
+  --brand-warning-900: #662F0A;
+  --brand-error-100: #FED6D6;
+  --brand-error-500: #F03030;
+  --brand-error-900: #661414;
 }
