--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -179,6 +179,7 @@ blockquote {
 @import "blocks/breadcrumbs";
 @import "blocks/share-post";
 @import "blocks/table_of_content";
+@import "blocks/feedback";
 @import "blocks/footer";
 @import "responsive";
 
