--- a/qdrant-landing/themes/qdrant/layouts/partials/feedback.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/feedback.html
@@ -1,37 +1,24 @@
-{{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable)) -}}
-{{ with .Site.Params.ui.feedback -}}
-<style>
-  .feedback--answer {
-    display: inline-block;
-  }
-  .feedback--answer-no {
-    margin-left: 1em;
-  }
-  .feedback--response {
-    display: none;
-    margin-top: 1em;
-  }
-  .feedback--response__visible {
-    display: block;
-  }
-</style>
-<div class="d-print-none">
-<h2 class="feedback--title">{{- i18n "feedback_title" -}}</h2>
-<p class="feedback--question">{{- i18n "feedback_question" -}}</p>
-<button class="btn btn-primary mb-4 feedback--answer feedback--answer-yes">{{- i18n "feedback_positive" -}}</button>
-<button class="btn btn-primary mb-4 feedback--answer feedback--answer-no">{{- i18n "feedback_negative" -}}</button>
-<p class="feedback--response feedback--response-yes">
-  {{ .yes | safeHTML }}
-</p>
-<p class="feedback--response feedback--response-no">
-  {{ .no | safeHTML }}
-</p>
+{{ if .Site.Params.feedback.enable }}
+
+<div class="feedback d-print-none">
+  <h6 class="feedback__title">{{ .Site.Params.feedback.title }}</h6>
+  <p class="feedback__question">{{ .Site.Params.feedback.question }}</p>
+  <button class="btn feedback__answer feedback__answer_yes">{{ .Site.Params.feedback.positive }}</button>
+  <button class="btn feedback__answer feedback__answer_no">{{ .Site.Params.feedback.negative }}</button>
+  <p class="feedback__response feedback__response_yes">
+    {{.Site.Params.feedback.on_yes | safeHTML }}
+  </p>
+  <p class="feedback__response feedback__response_no">
+    {{.Site.Params.feedback.on_no | safeHTML }}
+    <br>You can <a class="text-brand-p" href="{{ .Site.Params.githubDocPrefix }}{{ .File.Path }}" target="_blank">edit</a> this page on GitHub, or <a class="text-brand-p" href="{{ .Site.Params.githubIssueLink }}" target="_blank">create</a> a GitHub issue.
+  </p>
 </div>
+
 <script>
-  const yesButton = document.querySelector('.feedback--answer-yes');
-  const noButton = document.querySelector('.feedback--answer-no');
-  const yesResponse = document.querySelector('.feedback--response-yes');
-  const noResponse = document.querySelector('.feedback--response-no');
+  const yesButton = document.querySelector('.feedback__answer_yes');
+  const noButton = document.querySelector('.feedback__answer_no');
+  const yesResponse = document.querySelector('.feedback__response_yes');
+  const noResponse = document.querySelector('.feedback__response_no');
   const disableButtons = () => {
     yesButton.disabled = true;
     noButton.disabled = true;
@@ -45,17 +32,16 @@
     });
   };
   yesButton.addEventListener('click', () => {
-    yesResponse.classList.add('feedback--response__visible');
+    yesResponse.classList.add('feedback__response_visible');
     disableButtons();
-    {{ $maxValue := .max_value | default 100 -}}
+    {{ $maxValue := .Site.Params.feedback.max_value | default 100 -}}
     sendFeedback({{ $maxValue }});
   });
   noButton.addEventListener('click', () => {
-    noResponse.classList.add('feedback--response__visible');
+    noResponse.classList.add('feedback__response_visible');
     disableButtons();
     sendFeedback(0);
   });
 </script>
-{{ end -}}
-<br />
-{{ end -}}
+
+{{ end }}
