--- a/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
@@ -5,12 +5,13 @@
     <div class="sticky-top">
         <h5 class="tableOfContent__header">Table of contents</h5>
         {{ .TableOfContents }}
-        <div class="divider mb-20"></div>
-	        {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
-                {{ partial "feedback.html" . -}}
-                <br />
-        {{ end }}
+        <div class="divider pt-2 mb-3"></div>
 
+        {{ if (and (not .Params.hide_feedback) (.Site.Params.feedback.enable) (.Site.GoogleAnalytics)) }}
+        {{ partial "feedback.html" . -}}
+        {{ end }}
+        <div class="divider pt-4 mb-2"></div>
+        <ul class="tableOfContent__footer">
             <li>
                 <a class="text-brand-p" href="{{ .Site.Params.githubDocPrefix }}{{ .File.Path }}" target="_blank">
                     <i class="fab fa-github"></i> Edit on GitHub
@@ -22,7 +23,6 @@
                 </a>
             </li>
         </ul>
-        <br/>
     </div>
     {{ end }}
 </nav>
