Marketing landing page (#540)
* wip: marketing landig

* wip landing page

* wip landing page

* wip landing page

* banner, backgrounds

* marquee logos, fixes

* fixes

* fixes, separate css file

* change of metadata

* redirect fix

--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -1,3 +1,7 @@
+<!-- we suppose that if a page is excluded from the site map it also shouldn't be indexed by any robots -->
+{{ if .Params.sitemapExclude}}
+<meta name="robots" content="noindex">
+{{ end }}
 {{ if .Params.description }}
 <meta name="description" content="{{ .Params.Description }}">
 {{ else }}
@@ -199,10 +203,8 @@
 {{ end }}
 
 <!-- Canonical URL -->
-{{ if (eq .Section "documentation") }}
 {{ if .Params.canonicalUrl }}
 <link rel="canonical" href="{{ .Params.canonicalUrl }}">
 {{ else }}
 <link rel="canonical" href="{{ .Permalink }}">
-{{ end }}
 {{ end }}
