--- a/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/table_of_content.html
@@ -5,7 +5,8 @@
     <div class="sticky-top">
         <h5 class="tableOfContent__header">Table of contents</h5>
         {{ .TableOfContents }}
-        <div class="divider mb-1"></div>
+
+        <div class="divider mb-2"></div>
         <ul class="tableOfContent__footer">
             <li>
                 <a class="text-brand-p" href="{{ .Site.Params.githubDocPrefix }}{{ .File.Path }}" target="_blank">
@@ -18,7 +19,11 @@
                 </a>
             </li>
         </ul>
-        <br/>
+        <div class="divider pt-2 mb-3"></div>
+
+        {{ if (and (not .Params.hide_feedback) (.Site.Params.feedback.enable) (.Site.GoogleAnalytics)) }}
+            {{ partial "feedback.html" . -}}
+        {{ end }}
     </div>
     {{ end }}
 </nav>
