custom code highlighter thema

--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -18,6 +18,7 @@
 @import "blocks/optimized-section";
 @import "blocks/clients-section";
 @import "blocks/prices-page";
+@import "syntax-highlight";
 
 /***
 
