--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -177,6 +177,7 @@ blockquote {
 @import "blocks/share-post";
 @import "blocks/table_of_content";
 @import "blocks/feedback";
+@import "blocks/github-links";
 @import "blocks/footer";
 @import "responsive";
 
