--- a/qdrant-landing/themes/qdrant/static/css/_syntax-highlight.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_syntax-highlight.scss
@@ -14,7 +14,7 @@
 }
 /* PreWrapper */ .chroma { background-color:  var(--neutral-n-50, #F2F6FF); }
 /* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color: var(--brand-error-500) }
+/* Error */ .chroma .err { color:  var(--neutral-n-700, #1F3266) }
 /* CodeLine */ .chroma .cl { font-weight: 500; }
 /* LineLink */ .chroma .lnlinks { outline: none; text-decoration: none; color: inherit }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
