http tab, mask size

--- a/qdrant-landing/themes/qdrant/static/css/_lang-switcher.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_lang-switcher.scss
@@ -34,6 +34,9 @@ $tabs-font-color-hover: var(--neutral-n-600);
       width: 16px;
       height: 16px;
       background-color: $tabs-font-color;
+      mask-size: contain;
+      mask-repeat: no-repeat;
+      mask-position: center;
     }
 
     &_python {
@@ -58,6 +61,12 @@ $tabs-font-color-hover: var(--neutral-n-600);
       &:before {
         -webkit-mask-image: url("/css/assets/lang-switcher/java.svg");
         mask-image: url("/css/assets/lang-switcher/java.svg");
+      }
+    }
+    &_http {
+      &:before {
+        -webkit-mask-image: url("/css/assets/lang-switcher/http.svg");
+        mask-image: url("/css/assets/lang-switcher/http.svg");
       }
     }
 
