--- a/qdrant-landing/themes/qdrant/static/css/blocks/_copy-btn.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_copy-btn.scss
@@ -11,11 +11,14 @@
 	background: var(--neutral-n-50);
 	i {
 		display: block;
-		width: 21px;
-		height: 23px;
+		width: 24px;
+		height: 24px;
 		background-color: var(--neutral-n-700);
 		-webkit-mask-image: url("/css/assets/copy.svg");
 		mask-image: url("/css/assets/copy.svg");
+		mask-size: contain;
+		mask-repeat: no-repeat;
+		mask-position: center;
 	}
 }
 
