moved old package.json to the old theme

--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -3,7 +3,7 @@
 @use "mixins/marquee";
 
 @import "colors";
-@import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Roboto:400,700,700i&display=swap');
 @import url('font-awesome.css');
