--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -18,6 +18,7 @@
 @import "blocks/optimized-section";
 @import "blocks/clients-section";
 @import "blocks/prices-page";
+@import "syntax-highlight";
 
 /***
 
@@ -54,10 +55,6 @@ QDRANT - RELATED
 */
 
 /** todo: move to related files */
-
-code {
-  color: #6e0c21;
-}
 
 .features-section .feature-block .text li {
   display: block;
