--- a/qdrant-landing/themes/qdrant-24/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/main.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
-@import "bootstrap";
+@import "satoshi-font";
+@import "bootstrap-custom";
 
 body {
-  background: #0f6674;
+  background: $neutral-90;
 }
