--- a/qdrant-landing/themes/qdrant-24/assets/css/_satoshi-font.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/_satoshi-font.scss
@@ -35,7 +35,7 @@
 */
 
 @font-face {
-  font-family: 'Satoshi-Variable';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Variable.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Variable.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Variable.ttf') format('truetype');
@@ -57,7 +57,7 @@
 */
 
 @font-face {
-  font-family: 'Satoshi-VariableItalic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-VariableItalic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-VariableItalic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-VariableItalic.ttf') format('truetype');
@@ -68,7 +68,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Light';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Light.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Light.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Light.ttf') format('truetype');
@@ -79,7 +79,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-LightItalic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-LightItalic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-LightItalic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-LightItalic.ttf') format('truetype');
@@ -90,7 +90,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Regular';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Regular.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Regular.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Regular.ttf') format('truetype');
@@ -101,7 +101,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Italic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Italic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Italic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Italic.ttf') format('truetype');
@@ -112,7 +112,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Medium';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Medium.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Medium.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Medium.ttf') format('truetype');
@@ -123,7 +123,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-MediumItalic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-MediumItalic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-MediumItalic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-MediumItalic.ttf') format('truetype');
@@ -134,7 +134,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Bold';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Bold.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Bold.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Bold.ttf') format('truetype');
@@ -145,7 +145,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-BoldItalic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-BoldItalic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-BoldItalic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-BoldItalic.ttf') format('truetype');
@@ -156,7 +156,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-Black';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-Black.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-Black.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-Black.ttf') format('truetype');
@@ -167,7 +167,7 @@
 
 
 @font-face {
-  font-family: 'Satoshi-BlackItalic';
+  font-family: 'Satoshi';
   src: url('../fonts/satoshi/Satoshi-BlackItalic.woff2') format('woff2'),
        url('../fonts/satoshi/Satoshi-BlackItalic.woff') format('woff'),
        url('../fonts/satoshi/Satoshi-BlackItalic.ttf') format('truetype');
