--- a/qdrant-landing/themes/qdrant-24/layouts/debug-skip/baseof.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/debug-skip/baseof.html
@@ -1,23 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Title</title>
-  {{ $opts := dict
-  "transpiler" "dartsass"
-  "enableSourceMap" (not hugo.IsProduction)
-  }}
-  {{ with resources.Get "/css/main.scss" | toCSS $opts | minify | fingerprint }}
-  <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-  {{ end }}
 
-  {{ $pageSearchCss := resources.Get "/css/qdrant-page-search.css" | resources.Fingerprint "sha512" }}
-  <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}">
+{{ partial "head.html" . }}
 
-</head>
 <body>
 
 {{ block "main" . }}{{ end }}
+
+<details>
+  <summary>Resources</summary>
+  {{ range resources.Match "**/*.*" }}
+  <p>{{ .RelPermalink }}</p>
+  {{ end }}
+</details>
 
 {{ $pageSearchScrollJs := resources.Get "/js/qdrant-page-search-scroll.min.js" | resources.Fingerprint "sha512" }}
 <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
