--- a/qdrant-landing/themes/qdrant-24/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/index.html
@@ -1,20 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
-    {{ $opts := dict
-      "transpiler" "dartsass"
-      "enableSourceMap" (not hugo.IsProduction)
-    }}
-    {{ with resources.Get "css/main.scss" | toCSS $opts | minify | fingerprint }}
-    <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-    {{ end }}
-
-    {{ $pageSearchCss := resources.Get "/css/qdrant-page-search.css" | resources.Fingerprint "sha512" }}
-    <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}">
-
-  </head>
+  {{ partial "head.html" . }}
   <body>
 
 
